add emotion eslint plugin

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "plugins": ["react", "prettier"],
+  "plugins": ["react", "emotion", "prettier"],
   "rules": {
     "prettier/prettier": "error"
   },
