--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "eslint-config-prettier": "^3.6.0",
     "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-emotion": "^10.0.6",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-promise": "^4.0.1",
