--- a/package.json
+++ b/package.json
@@ -14,15 +14,21 @@
     "gatsby-plugin-offline": "^2.0.16",
     "gatsby-plugin-react-helmet": "^3.0.2",
     "gatsby-plugin-sharp": "^2.0.14",
+    "gatsby-remark-copy-linked-files": "^2.0.8",
+    "gatsby-remark-images": "^3.0.1",
+    "gatsby-remark-prismjs": "^3.2.2",
+    "gatsby-remark-smartypants": "^2.0.7",
     "gatsby-source-filesystem": "^2.0.17",
     "gatsby-transformer-remark": "^2.2.0",
     "gatsby-transformer-sharp": "^2.1.8",
     "hex-rgb": "^3.0.0",
+    "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
-    "react-transition-group": "^2.5.3"
+    "react-transition-group": "^2.5.3",
+    "url-search-params-polyfill": "^5.0.0"
   },
   "keywords": [
     "gatsby"
