--- a/package.json
+++ b/package.json
@@ -8,27 +8,27 @@
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.12",
     "animejs": "^3.0.1",
-    "gatsby": "^2.0.76",
+    "gatsby": "^2.12.0",
     "gatsby-image": "^2.0.20",
-    "gatsby-plugin-layout": "^1.0.11",
-    "gatsby-plugin-manifest": "^2.0.9",
-    "gatsby-plugin-offline": "^2.0.16",
-    "gatsby-plugin-react-helmet": "^3.0.2",
-    "gatsby-plugin-sharp": "^2.0.14",
-    "gatsby-plugin-sitemap": "^2.0.6",
-    "gatsby-remark-copy-linked-files": "^2.0.8",
-    "gatsby-remark-images": "^3.0.1",
-    "gatsby-remark-prismjs": "^3.2.2",
-    "gatsby-remark-smartypants": "^2.0.7",
-    "gatsby-source-filesystem": "^2.0.17",
-    "gatsby-transformer-remark": "^2.2.0",
-    "gatsby-transformer-sharp": "^2.1.8",
+    "gatsby-plugin-layout": "^1.1.0",
+    "gatsby-plugin-manifest": "^2.2.0",
+    "gatsby-plugin-offline": "^2.2.0",
+    "gatsby-plugin-react-helmet": "^3.1.0",
+    "gatsby-plugin-sharp": "^2.2.1",
+    "gatsby-plugin-sitemap": "^2.2.1",
+    "gatsby-remark-copy-linked-files": "^2.1.0",
+    "gatsby-remark-images": "^3.1.2",
+    "gatsby-remark-prismjs": "^3.3.0",
+    "gatsby-remark-smartypants": "^2.1.0",
+    "gatsby-source-filesystem": "^2.1.1",
+    "gatsby-transformer-remark": "^2.5.0",
+    "gatsby-transformer-sharp": "^2.2.0",
     "hex-rgb": "^3.0.0",
     "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-helmet": "^5.2.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-helmet": "^6.0.0-beta",
     "react-transition-group": "^2.5.3",
     "url-search-params-polyfill": "^5.0.0"
   },
