--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-image": "^2.2.4",
     "gatsby-plugin-layout": "^1.1.0",
     "gatsby-plugin-manifest": "^2.2.1",
+    "gatsby-plugin-netlify-cms": "^4.1.13",
     "gatsby-plugin-offline": "^2.2.1",
     "gatsby-plugin-react-helmet": "^3.1.0",
     "gatsby-plugin-sharp": "^2.2.3",
@@ -24,6 +25,7 @@
     "gatsby-transformer-remark": "^2.5.0",
     "gatsby-transformer-sharp": "^2.2.1",
     "hex-rgb": "^4.1.0",
+    "netlify-cms-app": "^2.9.7",
     "prismjs": "^1.15.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
