--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,10 +2,16 @@ backend:
   name: git-gateway
   branch: feature/netlify-cms
 
-media_folder: static/assets
+media_folder: backend/assets
 public_folder: assets
 
 collections:
+  - name: who
+    label: Who
+    folder: backend/work
+    fields:
+      - { name: title, label: Title }
+      - { name: body, label: Body, widget: markdown }
   - name: work
     label: Work
     folder: backend/work
@@ -14,10 +20,44 @@ collections:
       - { name: path, label: Path }
       - { name: date, label: Date, widget: date }
       - { name: title, label: Title }
+      - { name: description, label: Description, widget: markdown }
       - { name: body, label: Body, widget: markdown }
+      - name: heroImages
+        label: Hero Images
+        widget: list
+        required: false
+        fields: 
+          - label: Image
+            name: image
+            widget: image
+          - label: Alt text
+            name: alt
+          - label: Caption
+            name: caption
+      - label: Hero Videos
+        name: heroVideos
+        widget: list
+        required: false
+        default: false
+      - label: Hero Video Autoplay
+        name: heroVideoAutoPlay
+        widget: boolean
+      - name: contentUrl
+        label: Content URL
+        required: false
+      - name: archive
+        label: Archive
+        default: false
+        widget: boolean
+      - name: hide
+        label: Hide
+        default: false
+        widget: boolean
       - name: layout
         label: Layout
         default: 'work-item'
-        options:
-          - { label: 'Work item', value: 'work-item' }
-        widget: select
+        widget: hidden
+      - name: category
+        label: Category
+        default: 'work'
+        widget: hidden
