--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-standard": "^4.0.0",
+    "netlify-cms-backend-fs": "^0.4.4",
     "prettier": "^1.18.2"
   },
   "repository": {
