--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -5,10 +5,15 @@ backend:
 media_folder: backend/assets
 public_folder: assets
 
+development_overrides:
+  backend:
+    name: file-system
+    api_root: 'http://localhost:8000/api'
+
 collections:
   - name: who
     label: Who
-    folder: backend/work
+    folder: backend/who
     fields:
       - { name: title, label: Title }
       - { name: body, label: Body, widget: markdown }
@@ -26,7 +31,7 @@ collections:
         label: Hero Images
         widget: list
         required: false
-        fields: 
+        fields:
           - label: Image
             name: image
             widget: image
