--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,12 +17,11 @@ collections:
     fields:
       - { name: title, label: Title }
       - { name: body, label: Body, widget: markdown }
-  - name: work
-    label: Work
-    folder: backend/work
+  - name: words
+    label: Words
+    folder: backend/words
     create: true
     fields:
-      - { name: path, label: Path }
       - { name: date, label: Date, widget: date }
       - { name: title, label: Title }
       - { name: description, label: Description, widget: markdown }
@@ -58,10 +57,50 @@ collections:
         label: Hide
         default: false
         widget: boolean
-      - name: layout
-        label: Layout
-        default: 'work-item'
+      - name: category
+        label: Category
+        default: 'work'
         widget: hidden
+  - name: work
+    label: Work
+    folder: backend/work
+    create: true
+    fields:
+      - { name: date, label: Date, widget: date }
+      - { name: title, label: Title }
+      - { name: description, label: Description, widget: markdown }
+      - { name: body, label: Body, widget: markdown }
+      - name: heroImages
+        label: Hero Images
+        widget: list
+        required: false
+        fields:
+          - label: Image
+            name: image
+            widget: image
+          - label: Alt text
+            name: alt
+          - label: Caption
+            name: caption
+      - label: Hero Videos
+        name: heroVideos
+        widget: list
+        required: false
+        default: false
+      - label: Hero Video Autoplay
+        name: heroVideoAutoPlay
+        widget: boolean
+      - name: contentUrl
+        label: Content URL
+        required: false
+      - name: archive
+        label: Archive
+        default: false
+        widget: boolean
+      - name: hide
+        label: Hide
+        default: false
+        widget: boolean
       - name: category
         label: Category
         default: 'work'
